trying to fix stuck light green

--- a/dsprojects/static/Sass/style.scss
+++ b/dsprojects/static/Sass/style.scss
@@ -234,7 +234,10 @@ button.btn.btn_bottombar {
     margin-left: -15px;
     margin-right: -15px;
     &:hover {
-    	background:$green;
+    	background: $green;
+    }
+    &:not(:disabled):not(.disabled):active {
+        background: none;
     }
 }
 
